--- a/main/static/style.css
+++ b/main/static/style.css
@@ -115,6 +115,10 @@ body {
     background-color: black;
 }
 
+.extra_info {
+    margin-left: -3rem;
+}
+
 .match_teams {
     display: grid;
     grid-template-columns: 50% 50%;
