Made team players names links to their stats pages. Also styled them to look like normal text.

--- a/main/static/style.css
+++ b/main/static/style.css
@@ -167,6 +167,11 @@ body {
     margin-left: 2px;
 }
 
+.team_anchor {
+    text-decoration: none;
+    color: black;
+}
+
 .header {
     color:white;
 }
